--- a/class-5/index.html
+++ b/class-5/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Objects</title>
-    <script src="./Example.js"></script>
+    <script src="./Objecr_creation.js"></script>
 </head>
 <body>
     <h1>Objects in Js</h1>
