array-methods-commit -1

--- a/class-4/index2.html
+++ b/class-4/index2.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./ArrayMethods.js"></script>
+    <script src="Polyfills_of_Array_Methods.js"></script>
 </head>
 <body>
-    <h1>Flattening Array and Object</h1>
+    <h1>Array All Methods</h1>
 </body>
 </html>
